# duckdb-substrait-extension

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  expression_filter_demo.sql  renovate.json  test_expression_filter.sql  vcpkg-configuration.json  vcpkg.json
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: c_tests.yml  distribution.yml  main_distribution.yml  sql_tests.yml
scripts/: generate_custom_functions.py  update_substrait.py
src/: custom_extensions.cpp  custom_extensions_generated.cpp  from_substrait.cpp  from_substrait_ast.cpp  substrait_extension.cpp  to_substrait.cpp
src/include/: from_substrait.hpp  from_substrait_ast.hpp  substrait_extension.hpp  to_substrait.hpp
test/c/: CMakeLists.txt  test_base_schema_projection.cpp  test_projection.cpp  test_substrait_c_api.cpp  test_substrait_c_utils.cpp  test_substrait_c_utils.hpp
test/python/: test_substrait_explain.py  test_substrait_from_json.py  test_substrait_json.py
test/sql/: test_aggregate.test  test_coalesce.test  test_custom_function.test  test_distinct.test  test_extension_urn.test  test_fetch_non_literal_expressions.test  test_from_substrait_basic.test  test_from_substrait_lateral_join.test  test_from_substrait_nested_types.test  test_join.test  test_lateral_join.test  test_list_type.test  test_literals.test  test_local_files_base_schema.test  test_local_files_hive_partitioning.test  test_map_type.test  test_named_table_resolution.test  test_nested_expressions.test  test_not_equal_join.test  test_spark_gateway.test  test_struct_types.test  test_substrait.test  (+11 more)
(+29 files in other folders)
